Version Changes for Hypermail

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Kent Landfield (kent@hypermail.org) (November 24, 2002)
  Made some updates to the docs.  Still need to update the
  docs to include writehaof, nonsequential, msgsperfolder and
  assure other config file directives are listed and current.

 Kent Landfield (kent@hypermail.org) (November 24, 2002)
  Added Russian language support.
  Submitted by Igor Solovyoff" <siv@intear.com.ua>

 Kent Landfield (kent@hypermail.org) (November 24, 2002)
  Made the  "_at_" antispam bit configurable by config file, using
      antispam_at = __somestring__  (does not have to have __ in it)
  Anything hardcoded by default, can be figured out and used by 
  spammers.  Particularly something like "_at_".
  Submitted by Philip Brown <phil@bolthole.com>

 Jose Kahan (jose@w3.org) (October 17, 2002)
  URL generation was broken when a URL had a '@' char and hypermail
  was using the mailcommand option. parseemail() didn't take this
  case into account yet (there's just an empty statement). I added a
  quick patch to convert the '@' into an HTML entity when doing the
  convertion inside a URL. The change is in translateurl().

 Jose Kahan (jose@w3.org) (October 2, 2002)
  In order to avoid hashed filename collisions, the filename
  is now built with a hash of the msgid concatenated to the
  Epoch seconds of the From date. This gives a total of
  16 characters (all data is represented in hex). Only messages
  that have the same msgid and that arrive in the same second
  will have a collision.
  I also compiled with the Warning flags and removed some
  warnings.

 Jose Kahan (jose@w3.org) (October 2, 2002)
  The access righs of the msgindex file (for the hashed filenames)
  were not being set at all.

 Jose Kahan (jose@w3.org) (October 1, 2002)
  The non-sequential msgid mode didn't work when updating the
  archives by one message. Fixed a confusion in the generation of
  the msgindex file.
